[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["saadoundhirat <saadoundhirat93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
sklearn = "^0.0"
jupyterlab = "^3.1.7"
wheel = "^0.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
